Adding social buttons.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,6 +46,10 @@
             text-align: center;
             margin-bottom: 2em;
         }
+
+        .social {
+            margin-top: 1em;
+        }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Jura:n,b,i,bi|Signika:n,b,i,bi|Forum:n,b,i,bi|Play:n,b,i,bi|&amp;subset=latin">
     <meta charset="utf-8" />
