--- a/_layouts/podcast.html
+++ b/_layouts/podcast.html
@@ -3,8 +3,24 @@
     <head>
         <title>{{ page.title }} - Valley Church</title>
         {% include head.html %}
+
+        <meta property="og:title" content="{{ page.title }}" />
+        <meta property="og:site_name" content="Valley Church Podcast" />
+        <meta property="og:url" content="{{ site.url }}/{{ page.url }}" />
+        <meta property="og:description" content="{{ page.title }}. {% if page.series %}Part {{ page.part }} of the {{ page.series }} series.{% endif %}" />
+        <meta property="og:image" content="{{ site.url }}/images/{{ page.image }}" />
     </head>
     <body>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+              js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+                  fjs.parentNode.insertBefore(js, fjs);
+                  }(document, 'script', 'facebook-jssdk'));
+        </script>
+
         {% if page.image %}
         <div class="imagebox"><img src="/images/{{ page.image }}" height="200px" /></div>
         {% endif %}
@@ -19,18 +35,29 @@
             By {{ page.speaker }}
             On {{ page.date | date: "%b %d, %Y" }}
 
+            <div class="social">
+                <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                <div class="fb-share-button" data-href="{{ site.url }}/{{ page.url }}" data-layout="button_count" style="vertical-align: top"></div>
+            </div>
+
             <p>
                 <audio controls="controls">
                     <source src="{{ site.cdn }}/{{ page.mp3 }}" type="audio/mpeg" />
                     Your browser does not support the audio tag. Please download the MP3.
                 </audio>
             </p>
-
             <p><a href="{{ site.cdn }}/{{ page.mp3 }}">Download MP3</a></p>
 
             {{ content }}
 
-            <p>Back to <a href="/sermons.html">All Sermons</a></div>
+            {% if page.series != page.title %}
+            {% if page.series == page.next.series %}
+            <p>Next in the series: <a href="{{ page.next.url }}">{{ page.next.title }}</a></p>
+            {% endif %}
+            {% endif %}
+
+            <p>Back to <a href="/sermons.html">All Sermons</a>.</div>
         </article>
     </body>
 </html>
