--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Valley Church</title>
+        <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
         {% include head.html %}
     </head>
     <body>
