Fixing image alignment.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,6 +46,10 @@
             text-align: center;
             margin-bottom: 2em;
         }
+      
+      	.imagebox img {
+          vertical-align: middle;
+        }
 
         .social {
             margin-top: 1em;
