--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,9 +46,10 @@
             text-align: center;
             margin-bottom: 2em;
         }
-      
-      	.imagebox img {
+
+        .imagebox img {
           vertical-align: middle;
+          max-width: 100%;
         }
 
         .social {
