--- a/_layouts/podcast.html
+++ b/_layouts/podcast.html
@@ -40,11 +40,11 @@
 
             <p>
                 <audio controls="controls">
-                    <source src="{{ site.cdn }}/{{ page.mp3 }}" type="audio/mpeg" />
+                    <source src="{{ site.cdn }}/sermons/{{ page.mp3 }}" type="audio/mpeg" />
                     Your browser does not support the audio tag. Please download the MP3.
                 </audio>
             </p>
-            <p><a href="{{ site.cdn }}/{{ page.mp3 }}">Download MP3</a></p>
+            <p><a href="{{ site.cdn }}/sermons/{{ page.mp3 }}">Download MP3</a></p>
 
             {{ content }}
 
